--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                             <img alt=" " aria-hidden="true" src="/asset/img/hypesquad_bravery.svg">
                             <img alt=" " aria-hidden="true" src="/asset/img/nitro.svg">
                             <img alt=" " aria-hidden="true" src="asset/img/boost_1_month.svg">
+                            <img alt=" " aria-hidden="true" src="asset/img/dev.png">
                             <!-- -->
                         </div>
                     </div>
@@ -51,14 +52,20 @@
                     <div class="body">
                         <div class="content">
                             <div class="about-section">
-                                <div class="title-body">ABOUT ME</div>
+                                <div class="title-body">Giới Thiệu Về Tôi</div>
                                 <!-- text -->
-                                <span class="text-base">Hi, I'm Tuan Anh, 15 years old and come from Vietnam. I'm
-                                    developing my Discord BOT, checkout it at <a href="https://yourauth.xyz/">Your
-                                        Auth</a>
-                                    Contact me easily via email
+                                <span class="text-base"> Coder Lỏ Thỉnh Thoảng Đi Copy Code <a href="duuy.ga"> Coming soon website </a>
+                                    <!-- Contact me easily via email
                                     <a href="/cdn-cgi/l/email-protection#18687d6c7d6a6c6d79767976705870776c75797174367b7775"><span class="__cf_email__" data-cfemail="d5a5b0a1b0a7a1a0b4bbb4bbbd95bdbaa1b8b4bcb9fbb6bab8">[email&#160;protected]</span></a> or
-                                    Discord!</span>
+                                    Discord!</span> -->
+                                <!-- -->
+                            </div>
+                            <div class="about-section">
+                                <div class="title-body">Bắt Đầu Học Code Từ</div>
+                                <!-- text -->
+                                <span class="text-base">  
+                                     Th12 25, 2021
+                                    </span> 
                                 <!-- -->
                             </div>
                             <div class="title-body">ROLES</div>
@@ -80,8 +87,8 @@
                                 <div class="column">
                                     <div class="platform">
                                         <img alt=" " aria-hidden="true" src="/asset/img/github.svg">
-                                        <div class="text-base platform-username">Peter Tuan Anh</div>
-                                        <a href="https://github.com/petertuananhdev" noreferrer noopener
+                                        <div class="text-base platform-username">Mr Duy DEV</div>
+                                        <a href="https://github.com/mrmanhsev" noreferrer noopener
                                             target="_blank">
                                             <img alt=" " aria-hidden="true" src="/asset/img/link.svg"
                                                 class="connect">
